force-app/main/default/objects/ilms__Page__c/ilms__Page__c.object-meta.xml
<CustomObject>
    <label>Page</label>
    <nameField>
        <displayFormat>Page - {00000}</displayFormat>
        <label>Page Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>