force-app/main/default/objects/ilms__Page__c/fields/ilms__Auto_Mark_As_Complete__c.field-meta.xml
<CustomField>
    <fullName>ilms__Auto_Mark_As_Complete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Automatically record user View</label>
    <type>Checkbox</type>
</CustomField>