force-app/main/default/objects/ilms__Page__c/fields/ilms__Chapter__c.field-meta.xml
<CustomField>
    <fullName>ilms__Chapter__c</fullName>
    <label>Chapter</label>
    <referenceTo>ilms__Chapter__c</referenceTo>
    <relationshipLabel>Pages</relationshipLabel>
    <relationshipName>Pages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>