force-app/main/default/objects/ilms__Page__c/fields/ilms__Dependency__c.field-meta.xml
<CustomField>
    <fullName>ilms__Dependency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependency</label>
    <referenceTo>ilms__Page__c</referenceTo>
    <relationshipLabel>Pages</relationshipLabel>
    <relationshipName>Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>