force-app/main/default/objects/ilms__Page__c/fields/ilms__Duration__c.field-meta.xml
<CustomField>
    <fullName>ilms__Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Duration (Minutes)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>