force-app/main/default/objects/ilms__Page__c/fields/ilms__Files__c.field-meta.xml
<CustomField>
    <fullName>ilms__Files__c</fullName>
    <label>Files</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>