force-app/main/default/objects/ilms__Page__c/fields/ilms__Hint_Penality__c.field-meta.xml
<CustomField>
    <fullName>ilms__Hint_Penality__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hint Penality Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>