force-app/main/default/objects/ilms__Page__c/fields/ilms__Knowledge__c.field-meta.xml
<CustomField>
    <fullName>ilms__Knowledge__c</fullName>
    <label>Knowledge</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>