force-app/main/default/objects/ilms__Page__c/fields/ilms__Lesson_Content__c.field-meta.xml
<CustomField>
    <fullName>ilms__Lesson_Content__c</fullName>
    <label>Lesson Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>