force-app/main/default/objects/ilms__Page__c/fields/ilms__Message_Failed__c.field-meta.xml
<CustomField>
    <fullName>ilms__Message_Failed__c</fullName>
    <inlineHelpText>Message to display at the end of the quiz, when failed</inlineHelpText>
    <label>Message Failed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>