force-app/main/default/objects/ilms__Page__c/fields/ilms__Message_Passed__c.field-meta.xml
<CustomField>
    <fullName>ilms__Message_Passed__c</fullName>
    <inlineHelpText>Message to display at the end of the quiz when passed</inlineHelpText>
    <label>Message Passed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>