force-app/main/default/objects/ilms__Page__c/fields/ilms__Minimum_Time__c.field-meta.xml
<CustomField>
    <fullName>ilms__Minimum_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Required time on Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>