force-app/main/default/objects/ilms__Page__c/fields/ilms__Page_Name__c.field-meta.xml
<CustomField>
    <fullName>ilms__Page_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>