force-app/main/default/objects/ilms__Page__c/fields/ilms__Page_Reuse__c.field-meta.xml
<CustomField>
    <fullName>ilms__Page_Reuse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This will allow you to link to other content Pages and reuse then in other Courses or Chapters.</inlineHelpText>
    <label>Page Reuse</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ilms__Page__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Content</value>
        </filterItems>
        <infoMessage>Content pages available to be reused.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ilms__Page__c</referenceTo>
    <relationshipLabel>Pages (Page Reuse)</relationshipLabel>
    <relationshipName>Pages</relationshipName>
    <type>Lookup</type>
</CustomField>