force-app/main/default/objects/ilms__Page__c/fields/ilms__Previous_Page_Dependency__c.field-meta.xml
<CustomField>
    <fullName>ilms__Previous_Page_Dependency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is set then it means the Dependency will always be the Previous Page.</description>
    <label>Previous Page Dependency</label>
    <type>Checkbox</type>
</CustomField>