force-app/main/default/objects/ilms__Page__c/fields/ilms__Questions_Count__c.field-meta.xml
<CustomField>
    <fullName>ilms__Questions_Count__c</fullName>
    <label>Number of Questions</label>
    <summaryForeignKey>ilms__Question__c.ilms__Page__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>