force-app/main/default/objects/ilms__Page__c/fields/ilms__Questions_Limit__c.field-meta.xml
<CustomField>
    <fullName>ilms__Questions_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Questions Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>