force-app/main/default/objects/ilms__Page__c/fields/ilms__Quiz_Answers_Retake__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quiz_Answers_Retake__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Show Right Answers after no. of retakes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>