force-app/main/default/objects/ilms__Page__c/fields/ilms__Quiz_Auto_Start__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quiz_Auto_Start__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quiz Auto Start</label>
    <type>Checkbox</type>
</CustomField>