force-app/main/default/objects/ilms__Page__c/fields/ilms__Quiz_Default_Score__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quiz_Default_Score__c</fullName>
    <label>Default Question Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>