force-app/main/default/objects/ilms__Page__c/fields/ilms__Quiz_During_Answers__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quiz_During_Answers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immediate Answer</label>
    <type>Checkbox</type>
</CustomField>