force-app/main/default/objects/ilms__Page__c/fields/ilms__Quiz_End_Answers__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quiz_End_Answers__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Provide Answer Summary</label>
    <type>Checkbox</type>
</CustomField>