force-app/main/default/objects/ilms__Page__c/fields/ilms__Quiz_Instructions__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quiz_Instructions__c</fullName>
    <label>Quiz Instructions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>