force-app/main/default/objects/ilms__Page__c/fields/ilms__Quiz_Limit_Time__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quiz_Limit_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Submit quiz when time expires</label>
    <type>Checkbox</type>
</CustomField>