force-app/main/default/objects/ilms__Page__c/fields/ilms__Quiz_Max_Retake__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quiz_Max_Retake__c</fullName>
    <label>Quiz Max Retake</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>