force-app/main/default/objects/ilms__Page__c/fields/ilms__Quiz_Randomize__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quiz_Randomize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Randomize Questions</label>
    <type>Checkbox</type>
</CustomField>