force-app/main/default/objects/ilms__Page__c/fields/ilms__Quiz_Retake__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quiz_Retake__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Quiz Retake</label>
    <type>Checkbox</type>
</CustomField>