force-app/main/default/objects/ilms__Page__c/fields/ilms__Type__c.field-meta.xml
<CustomField>
    <fullName>ilms__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>lesson</fullName>
                <default>true</default>
                <label>lesson</label>
            </value>
            <value>
                <fullName>quiz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>