force-app/main/default/objects/ilms__Page__c/recordTypes/ilms__Content.recordType-meta.xml
<RecordType>
    <fullName>ilms__Content</fullName>
    <active>true</active>
    <description>This is used when creating the Content for your Courses.</description>
    <label>Content</label>
</RecordType>