force-app/main/default/objects/ilms__Page__c/recordTypes/ilms__File.recordType-meta.xml
<RecordType>
    <fullName>ilms__File</fullName>
    <active>true</active>
    <description>Upload your PPT, PDF or Images to add rich content to your course.</description>
    <label>File</label>
</RecordType>