force-app/main/default/objects/ilms__Page__c/recordTypes/ilms__Instructor.recordType-meta.xml
<RecordType>
    <fullName>ilms__Instructor</fullName>
    <active>false</active>
    <label>Instructor</label>
</RecordType>