force-app/main/default/objects/ilms__Page__c/recordTypes/ilms__Knowledge.recordType-meta.xml
<RecordType>
    <fullName>ilms__Knowledge</fullName>
    <active>true</active>
    <description>Bring your Knowledge Articles into Impact</description>
    <label>Knowledge</label>
</RecordType>