force-app/main/default/objects/ilms__Page__c/recordTypes/ilms__Page_Reuse.recordType-meta.xml
<RecordType>
    <fullName>ilms__Page_Reuse</fullName>
    <active>true</active>
    <description>This will allow you to link to &#39;Already created Pages&#39; to enable reuse of assets between Courses and Chapter</description>
    <label>Page Reuse</label>
</RecordType>