force-app/main/default/objects/ilms__Page__c/recordTypes/ilms__Quiz.recordType-meta.xml
<RecordType>
    <fullName>ilms__Quiz</fullName>
    <active>true</active>
    <description>This is used to create a Quiz as part of your Course.</description>
    <label>Quiz</label>
</RecordType>