force-app/main/default/objects/ilms__Page__c/validationRules/ilms__Course_has_been_published.validationRule-meta.xml
<ValidationRule>
    <fullName>ilms__Course_has_been_published</fullName>
    <active>false</active>
    <description>Checks to see if the course has been published.  If it has, you can no longer make changes to the record.  This is for data integrity.</description>
    <errorConditionFormula>ilms__Chapter__r.ilms__Book__r.ilms__wasPublished__c == true</errorConditionFormula>
    <errorMessage>The course has been Published.  Unfortunately, you can no longer make changes to the Course and it&#39;s contents.  You will need to &#39;Clone&#39; the course to make any changes.</errorMessage>
</ValidationRule>